--- a/templates/product.html
+++ b/templates/product.html
@@ -75,7 +75,7 @@
 
           <h4 class="my-4 h4">Additional information</h4>
 
-          <p>People have also but these products</p>
+          <p>People have also buy these products</p>
 
         </div>
         <!--Grid column-->
